deployment/k8s-ingress-deployment.yaml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-proyecto-final-k8s
  labels:
    name: gateway-ingress-proyecto-final-k8s
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-smartstock-service
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /stocks-api
            pathType: Prefix
            backend:
              service:
                name: stocks-api-service
                port:
                  number: 80
          - path: /manufacture-api
            pathType: Prefix
            backend:
              service:
                name: manufacturerapi-service
                port:
                  number: 80
          - path: /document-manager
            pathType: Prefix
            backend:
              service:
                name: documentmanager-service
                port:
                  number: 80
          - path: /manufacture-worker
            pathType: Prefix
            backend:
              service:
                name: manufacturerworker-service
                port:
                  number: 80
          - path: /stores
            pathType: Prefix
            backend:
              service:
                name: stores-service
                port:
                  number: 80
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /sellers
            pathType: Prefix
            backend:
              service:
                name: seller-service
                port:
                  number: 80
          - path: /clients
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
          - path: /user_sessions
            pathType: Prefix
            backend:
              service:
                name: user-session-manager-service
                port:
                  number: 80
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: video-manager-api-service
                port:
                  number: 80
          - path: /routes
            pathType: Prefix
            backend:
              service:
                name: route-service
                port:
                  number: 80
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: monitor-service
                port:
                  number: 80
